--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": "true",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
+    "foundation": "zurb/bower-foundation",
+    "fontawesome": "~4.3.0"
   }
 }
